--- a/web-healthy/healthy-second-1.html
+++ b/web-healthy/healthy-second-1.html
@@ -14,12 +14,12 @@
 	<script src="js/fn.js"></script>
 </head>
 
-<body>
+<body class="bg-3">
 	<header class="second-header">
 		<img class="bg" src="./images/疾病风险切图/1head-bg.png" alt="">
 		<a class="back" href=""><img src="./images/疾病风险切图/1back.png" alt=""></a>
 		<h2>健康风险基因检测</h2>
-		<p>本报告共检测12个系统，101个健康风险单项，根据您的基因检测结果，以下为您患病风险相对较高的项目，建议您重点关注：</p>
+		<p>本报告共检测12个系统，101个健康风险单项，根据您的基因检<br />测结果，以下为您患病风险相对较高的项目，建议您重点关注：<br /></p>
 
 		<img class="list-bac" src="./images/疾病风险切图/1guanzhu-bg.png" alt="">
 		<span class="strong">重点关注</span>
@@ -53,39 +53,39 @@
 				<!-- 每个ul对应上面左侧的导航 -->
 				<ul class="right active">
 					<!-- red 和 blue 对应内部颜色是红还是蓝 -->
-					<li class="red"><a href="healthy-third-red.html"> 肿瘤1 <span>1.45倍</span></a></li>
-					<li class="red"><a href="healthy-third-red.html"> 肿瘤2 <span>1.35倍</span></a></li>
-					<li class="red"><a href="healthy-third-red.html"> 肿瘤3 <span>1.35倍</span></a></li>
-					<li class="red"><a href="healthy-third-red.html"> 肿瘤4 <span>1.35倍</span></a></li>
-					<li class="red"><a href="healthy-third-red.html"> 肿瘤5 <span>1.35倍</span></a></li>
-					<li class="red"><a href="healthy-third-red.html"> 肿瘤6 <span>1.35倍</span></a></li>
-					<li class="red"><a href="healthy-third-red.html"> 肿瘤7 <span>1.35倍</span></a></li>
-					<li class="red"><a href="healthy-third-red.html"> 肿瘤2肿瘤2肿瘤2肿瘤2肿瘤2肿瘤2肿瘤2肿瘤2肿瘤2 <span>1.35倍</span></a></li>
-					<li class="red"><a href="healthy-third-red.html"> 肿瘤2 <span>1.35倍</span></a></li>
-					<li class="red"><a href="healthy-third-red.html"> 肿瘤2 <span>1.35倍</span></a></li>
-					<li class="red"><a href="healthy-third-red.html"> 肿瘤2 <span>1.35倍</span></a></li>
-					<li class="red"><a href="healthy-third-red.html"> 肿瘤2 <span>1.35倍</span></a></li>
-					<li class="red"><a href="healthy-third-red.html"> 肿瘤2 <span>1.35倍</span></a></li>
-					<li class="blue"><a href="healthy-third-blue.html"> 肿瘤2 <span>0.35倍</span></a></li>
-					<li class="blue"><a href="healthy-third-blue.html"> 肿瘤2 <span>0.35倍</span></a></li>
-					<li class="blue"><a href="healthy-third-blue.html"> 肿瘤2 <span>0.35倍</span></a></li>
-					<li class="blue"><a href="healthy-third-blue.html"> 肿瘤2 <span>0.35倍</span></a></li>
-					<li class="blue"><a href="healthy-third-blue.html"> 肿瘤2 <span>0.35倍</span></a></li>
-					<li class="blue"><a href="healthy-third-blue.html"> 肿瘤2 <span>0.35倍</span></a></li>
+					<li class="blue"><a href="healthy-third-red.html"><strong> 肿瘤1 </strong><span>1.45倍</span></a></li>
+					<li class="red active"><a href="healthy-third-red.html"><strong> 肿瘤2 </strong><span>1.35倍</span></a></li>
+					<li class="red"><a href="healthy-third-red.html"><strong> 肿瘤3 </strong><span>1.35倍</span></a></li>
+					<li class="red"><a href="healthy-third-red.html"><strong> 肿瘤4 </strong><span>1.35倍</span></a></li>
+					<li class="red"><a href="healthy-third-red.html"><strong> 肿瘤5 </strong><span>1.35倍</span></a></li>
+					<li class="red"><a href="healthy-third-red.html"><strong> 肿瘤6 </strong><span>1.35倍</span></a></li>
+					<li class="red"><a href="healthy-third-red.html"><strong> 肿瘤7 </strong><span>1.35倍</span></a></li>
+					<li class="red"><a href="healthy-third-red.html"><strong> 肿瘤2肿瘤2肿瘤2肿瘤2肿瘤2肿瘤2肿瘤2肿瘤2肿瘤2 </strong><span>1.35倍</span></a></li>
+					<li class="red"><a href="healthy-third-red.html"><strong> 肿瘤2 </strong><span>1.35倍</span></a></li>
+					<li class="red"><a href="healthy-third-red.html"><strong> 肿瘤2 </strong><span>1.35倍</span></a></li>
+					<li class="red"><a href="healthy-third-red.html"><strong> 肿瘤2 </strong><span>1.35倍</span></a></li>
+					<li class="red"><a href="healthy-third-red.html"><strong> 肿瘤2 </strong><span>1.35倍</span></a></li>
+					<li class="red"><a href="healthy-third-red.html"><strong> 肿瘤2 </strong><span>1.35倍</span></a></li>
+					<li class="blue"><a href="healthy-third-blue.html"><strong> 肿瘤2 </strong><span>0.35倍</span></a></li>
+					<li class="blue"><a href="healthy-third-blue.html"><strong> 肿瘤2 </strong><span>0.35倍</span></a></li>
+					<li class="blue"><a href="healthy-third-blue.html"><strong> 肿瘤2 </strong><span>0.35倍</span></a></li>
+					<li class="blue"><a href="healthy-third-blue.html"><strong> 肿瘤2 </strong><span>0.35倍</span></a></li>
+					<li class="blue"><a href="healthy-third-blue.html"><strong> 肿瘤2 </strong><span>0.35倍</span></a></li>
+					<li class="blue"><a href="healthy-third-blue.html"><strong> 肿瘤2 </strong><span>0.35倍</span></a></li>
 				</ul>
 				<ul class="right">
 					<!-- red 和 blue 对应内部颜色是红还是蓝 -->
-					<li class="red"><a href="healthy-third-red.html"> 心脑血管疾病1 <span>1.45倍</span></a></li>
-					<li class="red"><a href="healthy-third-red.html"> 心脑血管疾病2 <span>1.35倍</span></a></li>
+					<li class="red"><a href="healthy-third-red.html"><strong> 心脑血管疾病1 </strong><span>1.45倍</span></a></li>
+					<li class="red"><a href="healthy-third-red.html"><strong> 心脑血管疾病2 </strong><span>1.35倍</span></a></li>
 				</ul>
 				<ul class="right">
 					<!-- red 和 blue 对应内部颜色是红还是蓝 -->
-					<li class="red"><a href="healthy-third-red.html"> 消化系统1 <span>1.45倍</span></a></li>
-					<li class="blue"><a href="healthy-third-blue.html"> 消化系统2 <span>0.35倍</span></a></li>
+					<li class="red"><a href="healthy-third-red.html"><strong> 消化系统1 </strong><span>1.45倍</span></a></li>
+					<li class="blue"><a href="healthy-third-blue.html"><strong> 消化系统2 </strong><span>0.35倍</span></a></li>
 				</ul>
 				<ul class="right">
 					<!-- red 和 blue 对应内部颜色是红还是蓝 -->
-					<li class="blue"><a href="healthy-third-blue.html"> 五官及皮肤病2 <span>0.35倍</span></a></li>
+					<li class="blue"><a href="healthy-third-blue.html"><strong> 五官及皮肤病2 </strong><span>0.35倍</span></a></li>
 				</ul>
 			</div>
 
