--- a/web-healthy/healthy-second-3.html
+++ b/web-healthy/healthy-second-3.html
@@ -14,11 +14,11 @@
     <script src="js/fn.js"></script>
 </head>
 
-<body>
+<body class="bg-3">
     <header class="second-header-2">
         <img class="bg" src="./images/安全切图/headbg.png" alt="">
         <a class="back" href=""><img src="./images/安全切图/back.png" alt=""></a>
-        <img src="./images/安全切图/icon.png" alt="">
+        <img class="icon" src="./images/安全切图/icon.png" alt="">
         <h2>安全用药</h2>
         <p>SAFE MEDICATION</p>
     </header>
@@ -33,7 +33,7 @@
             <!-- 左侧导航菜单 -->
             <div class="left">
                 <ul>
-                    <li>心脑血管类药物</li>
+                    <li class="active">心脑血管类药物</li>
                     <li>消化系统类药物</li>
                     <li>抗癌类药物</li>
                 </ul>
@@ -43,52 +43,59 @@
                 <!-- 每个ul对应上面左侧的导航 -->
                 <ul class="right active">
                     <!-- red 和 blue gray 对应内部颜色是红还是蓝或者灰色 -->
-                    <li><a class="gray" href=""><span>阿替洛尔</span><i></i><em>正常</em></a></li>
-                    <li><a class="blue" href=""><span>贝那普利</span><i></i><em>减少</em></a></li>
-                    <li><a class="gray" href=""><span>噻吗洛尔</span><i></i><em>正常</em></a></li>
-                    <li><a class="gray" href=""><span>地高辛</span><i></i><em>正常</em></a></li>
-                    <li><a class="blue" href=""><span>卡维地洛</span><i></i><em>减少</em></a></li>
-                    <li><a class="red" href=""><span>氯吡格雷</span><i></i><em>减少或替换</em></a></li>
+                    <li class="gray"><a href=""><span>阿替洛尔</span><em>正常</em><i></i></a></li>
+                    <li class="blue active"><a href=""><span>贝那普利</span><em>减少</em><i></i></a></li>
+                    <li class="gray"><a href=""><span>噻吗洛尔</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href=""><span>地高辛</span><em>正常</em><i></i></a></li>
+                    <li class="blue"><a href=""><span>卡维地洛</span><em>减少</em><i></i></a></li>
+                    <li class="red"><a href=""><span>氯吡格雷</span><em>减少或替换</em><i></i></a></li>
+                    <li class="red"><a href=""><span>氯吡格雷</span><em>减少或替换</em><i></i></a></li>
+                    <li class="red"><a href=""><span>氯吡格雷</span><em>减少或替换</em><i></i></a></li>
+                    <li class="red"><a href=""><span>氯吡格雷</span><em>减少或替换</em><i></i></a></li>
+                    <li class="red"><a href=""><span>氯吡格雷</span><em>减少或替换</em><i></i></a></li>
+                    <li class="red"><a href=""><span>氯吡格雷</span><em>减少或替换</em><i></i></a></li>
+                    <li class="red"><a href=""><span>氯吡格雷</span><em>减少或替换</em><i></i></a></li>
+                    <li class="red"><a href=""><span>氯吡格雷</span><em>减少或替换</em><i></i></a></li>
                 </ul>
 
                 <ul class="right">
                     <!-- red 和 blue gray 对应内部颜色是红还是蓝或者灰色 -->
-                    <li><a class="gray" href=""><span>消化系统类药物</span><i></i><em>正常</em></a></li>
-                    <li><a class="blue" href=""><span>消化系统类药物</span><i></i><em>减少</em></a></li>
-                    <li><a class="gray" href=""><span>消化系统类药物</span><i></i><em>正常</em></a></li>
-                    <li><a class="gray" href=""><span>消化系统类药物</span><i></i><em>正常</em></a></li>
-                    <li><a class="gray" href=""><span>消化系统类药物</span><i></i><em>正常</em></a></li>
-                    <li><a class="gray" href=""><span>消化系统类药物</span><i></i><em>正常</em></a></li>
-                    <li><a class="gray" href=""><span>消化系统类药物</span><i></i><em>正常</em></a></li>
-                    <li><a class="gray" href=""><span>消化系统类药物</span><i></i><em>正常</em></a></li>
-                    <li><a class="gray" href=""><span>消化系统类药物</span><i></i><em>正常</em></a></li>
-                    <li><a class="gray" href=""><span>消化系统类药物</span><i></i><em>正常</em></a></li>
-                    <li><a class="gray" href=""><span>消化系统类药物</span><i></i><em>正常</em></a></li>
-                    <li><a class="gray" href=""><span>消化系统类药物</span><i></i><em>正常</em></a></li>
-                    <li><a class="gray" href=""><span>消化系统类药物</span><i></i><em>正常</em></a></li>
-                    <li><a class="gray" href=""><span>消化系统类药物</span><i></i><em>正常</em></a></li>
-                    <li><a class="gray" href=""><span>消化系统类药物</span><i></i><em>正常</em></a></li>
-                    <li><a class="gray" href=""><span>消化系统类药物</span><i></i><em>正常</em></a></li>
-                    <li><a class="gray" href=""><span>消化系统类药物</span><i></i><em>正常</em></a></li>
-                    <li><a class="gray" href=""><span>消化系统类药物</span><i></i><em>正常</em></a></li>
-                    <li><a class="gray" href=""><span>消化系统类药物</span><i></i><em>正常</em></a></li>
-                    <li><a class="gray" href=""><span>消化系统类药物</span><i></i><em>正常</em></a></li>
-                    <li><a class="blue" href=""><span>消化系统类药物</span><i></i><em>减少</em></a></li>
-                    <li><a class="red" href=""><span>消化系统类药物</span><i></i><em>减少或替换</em></a></li>
-                    <li><a class="red" href=""><span>消化系统类药物</span><i></i><em>减少或替换</em></a></li>
-                    <li><a class="red" href=""><span>消化系统类药物</span><i></i><em>减少或替换</em></a></li>
-                    <li><a class="red" href=""><span>消化系统类药物</span><i></i><em>减少或替换</em></a></li>
-                    <li><a class="red" href=""><span>消化系统类药物</span><i></i><em>减少或替换</em></a></li>
+                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="blue"><a href=""><span>消化系统类药物</span><em>减少</em><i></i></a></li>
+                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="blue"><a href=""><span>消化系统类药物</span><em>减少</em><i></i></a></li>
+                    <li class="red"><a href=""><span>消化系统类药物</span><em>减少或替换</em><i></i></a></li>
+                    <li class="red"><a href=""><span>消化系统类药物</span><em>减少或替换</em><i></i></a></li>
+                    <li class="red"><a href=""><span>消化系统类药物</span><em>减少或替换</em><i></i></a></li>
+                    <li class="red"><a href=""><span>消化系统类药物</span><em>减少或替换</em><i></i></a></li>
+                    <li class="red"><a href=""><span>消化系统类药物</span><em>减少或替换</em><i></i></a></li>
                 </ul>
 
                 <ul class="right">
                     <!-- red 和 blue gray 对应内部颜色是红还是蓝或者灰色 -->
-                    <li><a class="gray" href=""><span>抗癌类药物</span><i></i><em>正常</em></a></li>
-                    <li><a class="blue" href=""><span>抗癌类药物</span><i></i><em>减少</em></a></li>
-                    <li><a class="gray" href=""><span>抗癌类药物</span><i></i><em>正常</em></a></li>
-                    <li><a class="gray" href=""><span>抗癌类药物</span><i></i><em>正常</em></a></li>
-                    <li><a class="blue" href=""><span>抗癌类药物</span><i></i><em>减少</em></a></li>
-                    <li><a class="red" href=""><span>抗癌类药物</span><i></i><em>减少或替换</em></a></li>
+                    <li class="gray"><a href=""><span>抗癌类药物</span><em>正常</em><i></i></a></li>
+                    <li class="blue"><a href=""><span>抗癌类药物</span><em>减少</em><i></i></a></li>
+                    <li class="gray"><a href=""><span>抗癌类药物</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href=""><span>抗癌类药物</span><em>正常</em><i></i></a></li>
+                    <li class="blue"><a href=""><span>抗癌类药物</span><em>减少</em><i></i></a></li>
+                    <li class="red"><a href=""><span>抗癌类药物</span><em>减少或替换</em><i></i></a></li>
                 </ul>
             </div>
         </div>
