--- a/web-healthy/healthy-second-2.html
+++ b/web-healthy/healthy-second-2.html
@@ -18,7 +18,7 @@
     <header class="second-header-2">
         <img class="bg" src="./images/单基因切图/headbg.png" alt="">
         <a class="back" href=""><img src="./images/单基因切图/back.png" alt=""></a>
-        <img src="./images/单基因切图/icon.png" alt="">
+        <img class="icon" src="./images/单基因切图/icon.png" alt="">
         <h2>单基因遗传病</h2>
         <p>MONOGENIC HEREDITARY DISEASE</p>
     </header>
@@ -31,99 +31,99 @@
 
         <div class="con">
             <ul>
-                <li>
-                    <a class="blue" href="healthy-third-none.html">
+                <li class="blue">
+                    <a href="healthy-third-none.html">
                         <span>囊性纤维化</span>
                         <i></i>
                         <em>未携带</em>
                     </a>
                 </li>
-                <li>
-                    <a class="blue" href="healthy-third-none.html">
+                <li class="blue">
+                    <a href="healthy-third-none.html">
                         <span>范可尼贫血</span>
                         <i></i>
                         <em>未携带</em>
                     </a>
                 </li>
-                <li>
-                    <a class="red" href="healthy-third-has.html">
+                <li class="red">
+                    <a href="healthy-third-has.html">
                         <span>支近端型点状软骨<br>发育不良</span>
                         <i></i>
                         <em>携带两个<br>风险突变</em>
                     </a>
                 </li>
-                <li>
-                    <a class="blue" href="healthy-third-none.html">
+                <li class="blue">
+                    <a href="healthy-third-none.html">
                         <span>范可尼贫血</span>
                         <i></i>
                         <em>未携带</em>
                     </a>
                 </li>
-                <li>
-                    <a class="blue" href="healthy-third-none.html">
+                <li class="blue">
+                    <a href="healthy-third-none.html">
                         <span>范可尼贫血</span>
                         <i></i>
                         <em>未携带</em>
                     </a>
                 </li>
-                <li>
-                    <a class="blue" href="healthy-third-none.html">
+                <li class="blue">
+                    <a href="healthy-third-none.html">
                         <span>范可尼贫血</span>
                         <i></i>
                         <em>未携带</em>
                     </a>
                 </li>
-                <li>
-                    <a class="blue" href="healthy-third-none.html">
+                <li class="blue">
+                    <a href="healthy-third-none.html">
                         <span>范可尼贫血</span>
                         <i></i>
                         <em>未携带</em>
                     </a>
                 </li>
-                <li>
-                    <a class="blue" href="healthy-third-none.html">
+                <li class="blue">
+                    <a href="healthy-third-none.html">
                         <span>范可尼贫血</span>
                         <i></i>
                         <em>未携带</em>
                     </a>
                 </li>
-                <li>
-                    <a class="blue" href="healthy-third-none.html">
+                <li class="blue">
+                    <a href="healthy-third-none.html">
                         <span>范可尼贫血</span>
                         <i></i>
                         <em>未携带</em>
                     </a>
                 </li>
-                <li>
-                    <a class="blue" href="healthy-third-none.html">
+                <li class="blue">
+                    <a href="healthy-third-none.html">
                         <span>范可尼贫血</span>
                         <i></i>
                         <em>未携带</em>
                     </a>
                 </li>
-                <li>
-                    <a class="blue" href="healthy-third-none.html">
+                <li class="blue">
+                    <a href="healthy-third-none.html">
                         <span>范可尼贫血</span>
                         <i></i>
                         <em>未携带</em>
                     </a>
                 </li>
-                <li>
-                    <a class="blue" href="healthy-third-none.html">
+                <li class="blue">
+                    <a href="healthy-third-none.html">
                         <span>范可尼贫血</span>
                         <i></i>
                         <em>未携带</em>
                     </a>
                 </li>
-                <li>
-                    <a class="blue" href="healthy-third-none.html">
+                <li class="blue">
+                    <a href="healthy-third-none.html">
                         <span>范可尼贫血</span>
                         <i></i>
                         <em>未携带</em>
                     </a>
                 </li>
-                <li>
-                    <a class="blue" href="healthy-third-none.html">
+                <li class="blue">
+                    <a href="healthy-third-none.html">
                         <span>范可尼贫血</span>
                         <i></i>
                         <em>未携带</em>
