--- a/web-healthy/healthy-second-3.html
+++ b/web-healthy/healthy-second-3.html
@@ -43,59 +43,59 @@
                 <!-- 每个ul对应上面左侧的导航 -->
                 <ul class="right active">
                     <!-- red 和 blue gray 对应内部颜色是红还是蓝或者灰色 -->
-                    <li class="gray"><a href=""><span>阿替洛尔</span><em>正常</em><i></i></a></li>
-                    <li class="blue active"><a href=""><span>贝那普利</span><em>减少</em><i></i></a></li>
-                    <li class="gray"><a href=""><span>噻吗洛尔</span><em>正常</em><i></i></a></li>
-                    <li class="gray"><a href=""><span>地高辛</span><em>正常</em><i></i></a></li>
-                    <li class="blue"><a href=""><span>卡维地洛</span><em>减少</em><i></i></a></li>
-                    <li class="red"><a href=""><span>氯吡格雷</span><em>减少或替换</em><i></i></a></li>
-                    <li class="red"><a href=""><span>氯吡格雷</span><em>减少或替换</em><i></i></a></li>
-                    <li class="red"><a href=""><span>氯吡格雷</span><em>减少或替换</em><i></i></a></li>
-                    <li class="red"><a href=""><span>氯吡格雷</span><em>减少或替换</em><i></i></a></li>
-                    <li class="red"><a href=""><span>氯吡格雷</span><em>减少或替换</em><i></i></a></li>
-                    <li class="red"><a href=""><span>氯吡格雷</span><em>减少或替换</em><i></i></a></li>
-                    <li class="red"><a href=""><span>氯吡格雷</span><em>减少或替换</em><i></i></a></li>
-                    <li class="red"><a href=""><span>氯吡格雷</span><em>减少或替换</em><i></i></a></li>
+                    <li class="gray"><a href="./healthy-third-normal.html"><span>阿替洛尔</span><em>正常</em><i></i></a></li>
+                    <li class="red active"><a href="./healthy-third-innormal.html"><span>贝那普利</span><em>减少</em><i></i></a></li>
+                    <li class="gray"><a href="./healthy-third-normal.html"><span>噻吗洛尔</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href="./healthy-third-normal.html"><span>地高辛</span><em>正常</em><i></i></a></li>
+                    <li class="blue"><a href="./healthy-third-normal.html"><span>卡维地洛</span><em>减少</em><i></i></a></li>
+                    <li class="red"><a href="./healthy-third-normal.html"><span>氯吡格雷</span><em>减少或替换</em><i></i></a></li>
+                    <li class="red"><a href="./healthy-third-normal.html"><span>氯吡格雷</span><em>减少或替换</em><i></i></a></li>
+                    <li class="red"><a href="./healthy-third-normal.html"><span>氯吡格雷</span><em>减少或替换</em><i></i></a></li>
+                    <li class="red"><a href="./healthy-third-normal.html"><span>氯吡格雷</span><em>减少或替换</em><i></i></a></li>
+                    <li class="red"><a href="./healthy-third-normal.html"><span>氯吡格雷</span><em>减少或替换</em><i></i></a></li>
+                    <li class="red"><a href="./healthy-third-normal.html"><span>氯吡格雷</span><em>减少或替换</em><i></i></a></li>
+                    <li class="red"><a href="./healthy-third-normal.html"><span>氯吡格雷</span><em>减少或替换</em><i></i></a></li>
+                    <li class="red"><a href="./healthy-third-normal.html"><span>氯吡格雷</span><em>减少或替换</em><i></i></a></li>
                 </ul>
 
                 <ul class="right">
                     <!-- red 和 blue gray 对应内部颜色是红还是蓝或者灰色 -->
-                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
-                    <li class="blue"><a href=""><span>消化系统类药物</span><em>减少</em><i></i></a></li>
-                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
-                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
-                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
-                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
-                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
-                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
-                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
-                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
-                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
-                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
-                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
-                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
-                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
-                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
-                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
-                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
-                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
-                    <li class="gray"><a href=""><span>消化系统类药物</span><em>正常</em><i></i></a></li>
-                    <li class="blue"><a href=""><span>消化系统类药物</span><em>减少</em><i></i></a></li>
-                    <li class="red"><a href=""><span>消化系统类药物</span><em>减少或替换</em><i></i></a></li>
-                    <li class="red"><a href=""><span>消化系统类药物</span><em>减少或替换</em><i></i></a></li>
-                    <li class="red"><a href=""><span>消化系统类药物</span><em>减少或替换</em><i></i></a></li>
-                    <li class="red"><a href=""><span>消化系统类药物</span><em>减少或替换</em><i></i></a></li>
-                    <li class="red"><a href=""><span>消化系统类药物</span><em>减少或替换</em><i></i></a></li>
+                    <li class="gray"><a href="./healthy-third-normal.html"><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="blue"><a href="./healthy-third-normal.html"><span>消化系统类药物</span><em>减少</em><i></i></a></li>
+                    <li class="gray"><a href="./healthy-third-normal.html"><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href="./healthy-third-normal.html"><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href="./healthy-third-normal.html"><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href="./healthy-third-normal.html"><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href="./healthy-third-normal.html"><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href="./healthy-third-normal.html"><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href="./healthy-third-normal.html"><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href="./healthy-third-normal.html"><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href="./healthy-third-normal.html"><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href="./healthy-third-normal.html"><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href="./healthy-third-normal.html"><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href="./healthy-third-normal.html"><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href="./healthy-third-normal.html"><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href="./healthy-third-normal.html"><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href="./healthy-third-normal.html"><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href="./healthy-third-normal.html"><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href="./healthy-third-normal.html"><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href="./healthy-third-normal.html"><span>消化系统类药物</span><em>正常</em><i></i></a></li>
+                    <li class="blue"><a href="./healthy-third-normal.html"><span>消化系统类药物</span><em>减少</em><i></i></a></li>
+                    <li class="red"><a href="./healthy-third-normal.html"><span>消化系统类药物</span><em>减少或替换</em><i></i></a></li>
+                    <li class="red"><a href="./healthy-third-normal.html"><span>消化系统类药物</span><em>减少或替换</em><i></i></a></li>
+                    <li class="red"><a href="./healthy-third-normal.html"><span>消化系统类药物</span><em>减少或替换</em><i></i></a></li>
+                    <li class="red"><a href="./healthy-third-normal.html"><span>消化系统类药物</span><em>减少或替换</em><i></i></a></li>
+                    <li class="red"><a href="./healthy-third-normal.html"><span>消化系统类药物</span><em>减少或替换</em><i></i></a></li>
                 </ul>
 
                 <ul class="right">
                     <!-- red 和 blue gray 对应内部颜色是红还是蓝或者灰色 -->
-                    <li class="gray"><a href=""><span>抗癌类药物</span><em>正常</em><i></i></a></li>
-                    <li class="blue"><a href=""><span>抗癌类药物</span><em>减少</em><i></i></a></li>
-                    <li class="gray"><a href=""><span>抗癌类药物</span><em>正常</em><i></i></a></li>
-                    <li class="gray"><a href=""><span>抗癌类药物</span><em>正常</em><i></i></a></li>
-                    <li class="blue"><a href=""><span>抗癌类药物</span><em>减少</em><i></i></a></li>
-                    <li class="red"><a href=""><span>抗癌类药物</span><em>减少或替换</em><i></i></a></li>
+                    <li class="gray"><a href="./healthy-third-normal.html"><span>抗癌类药物</span><em>正常</em><i></i></a></li>
+                    <li class="blue"><a href="./healthy-third-normal.html"><span>抗癌类药物</span><em>减少</em><i></i></a></li>
+                    <li class="gray"><a href="./healthy-third-normal.html"><span>抗癌类药物</span><em>正常</em><i></i></a></li>
+                    <li class="gray"><a href="./healthy-third-normal.html"><span>抗癌类药物</span><em>正常</em><i></i></a></li>
+                    <li class="blue"><a href="./healthy-third-normal.html"><span>抗癌类药物</span><em>减少</em><i></i></a></li>
+                    <li class="red"><a href="./healthy-third-normal.html"><span>抗癌类药物</span><em>减少或替换</em><i></i></a></li>
                 </ul>
             </div>
         </div>
