--- a/web-healthy/healthy-third-has.html
+++ b/web-healthy/healthy-third-has.html
@@ -17,9 +17,9 @@
 <body>
     <header class="third-header">
         <img src="./images/单基因切图/2-1headbg.png" alt="">
-        <a class="bac" href=""><img src="./images/单基因切图/2-1back.png" alt=""></a>
+        <a class="back" href=""><img src="./images/单基因切图/2-1back.png" alt=""></a>
         <h3>囊性纤维化</h3>
-        <h3>CYSTIC FIBROSIS</h3>
+        <p>CYSTIC FIBROSIS</p>
     </header>
 
     <div class="get-res">
@@ -51,31 +51,31 @@
     <div class="report-div">
         <div class="report-title"><i class="site-yellow"></i><span>我的基因位点</span><em>MY GENE SITE</em></div>
         <div class="sport-table">
-            <div class="tr">
-                <span class="th">基因</span>
-                <span class="th">位点</span>
-                <span class="th">结果</span>
-                <span class="th">结果分析</span>
+                <div class="tr">
+                    <span class="th"><span> 基因</span></span>
+                    <span class="th"><span> 位点</span></span>
+                    <span class="th"><span> 结果</span></span>
+                    <span class="th"><span> 结果分析</span></span>
+                </div>
+                <div class="tr">
+                    <span class="td">VDR</span>
+                    <span class="td">of6699905</span>
+                    <span class="td">CC</span>
+                    <span class="td"><span>需求正常</span></span>
+                </div>
+                <div class="tr">
+                    <span class="td">LRP5</span>
+                    <span class="td">of9783346</span>
+                    <span class="td">CC</span>
+                    <span class="td"><span class="red">需求较高</span></span>
+                </div>
+                <div class="tr">
+                    <span class="td">VDR</span>
+                    <span class="td">of6699905</span>
+                    <span class="td">CC</span>
+                    <span class="td"><span>需求正常</span></span>
+                </div>
             </div>
-            <div class="tr">
-                <span class="td">VDR</span>
-                <span class="td">of6699905</span>
-                <span class="td">CC</span>
-                <span class="td"><span>需求正常</span></span>
-            </div>
-            <div class="tr">
-                <span class="td">LRP5</span>
-                <span class="td">of9783346</span>
-                <span class="td">CC</span>
-                <span class="td"><span class="red">需求较高</span></span>
-            </div>
-            <div class="tr">
-                <span class="td">VDR</span>
-                <span class="td">of6699905</span>
-                <span class="td">CC</span>
-                <span class="td"><span>需求正常</span></span>
-            </div>
-        </div>
     </div>
 
     <div class="report-div">
@@ -89,7 +89,7 @@
     <div class="report-div-2">
         <div class="report-title-2"><span>参考文献</span></div>
 
-        <div class="sport-text">
+        <div class="sport-text-2">
             <p>
                 1.Byrne E M , Gehrman P R , Medland S E , et al. A genome-wide association study of sleep habits and
                 insomnia[J]. American Journal of Medical Genetics Part B: Neuropsychiatric Genetics, 2013,
@@ -100,9 +100,9 @@
         </div>
     </div>
 
-    <button class="btn-yellow">上一项  先天性心脏病</button>
-    <button class="btn-yellow">下一项  冠心病</button>
-    <button class="btn-yellow">返回首页</button>
+    <a class="btn btn-yellow">上一项  先天性心脏病</a>
+    <a class="btn btn-yellow">下一项  冠心病</a>
+    <a class="btn btn-yellow">返回首页</button>
 
     <script src="js/jquery.min.js"></script>
     <script src="js/app.js"></script>
