--- a/web-healthy/healthy-second-1.html
+++ b/web-healthy/healthy-second-1.html
@@ -34,8 +34,8 @@
 
 	<div class="second-1-con">
 		<div class="search-bar">
-			<input type="text" placeholder="输入疾病名称查询">
-			<button class="search"></button>
+			<input id="search-text" type="text" placeholder="输入疾病名称查询">
+			<button  id="search-btn" class="search"></button>
 		</div>
 
 		<div class="list-all">
@@ -49,7 +49,7 @@
 			</ul>
 
 			<!-- 右侧详情 -->
-			<div class="right-detial active">
+			<div class="right-detial show-detial active">
 				<!-- 每个ul对应上面左侧的导航 -->
 				<ul class="right active">
 					<!-- red 和 blue 对应内部颜色是红还是蓝 -->
