--- a/web-healthy/healthy-second-3.html
+++ b/web-healthy/healthy-second-3.html
@@ -39,7 +39,7 @@
                 </ul>
             </div>
 
-            <div class="right-detial active">
+            <div class="right-detial show-detial active">
                 <!-- 每个ul对应上面左侧的导航 -->
                 <ul class="right active">
                     <!-- red 和 blue gray 对应内部颜色是红还是蓝或者灰色 -->
