--- a/web-healthy/healthy-third-blue.html
+++ b/web-healthy/healthy-third-blue.html
@@ -14,11 +14,11 @@
     <script src="js/fn.js"></script>
 </head>
 
-<body class="style-blue">
+<body class="style-blue bg-2">
     <header class="third-header-2">
         <img src="./images/疾病风险切图/2blue-head-bg.png" alt="">
         <h3>高血压</h3>
-        <h3>HYPERTENSION</h3>
+        <p>HYPERTENSION</p>
     </header>
 
     <div class="third-data">
@@ -31,12 +31,12 @@
                 <li>0</li>
             </ul>
             <div class="data-pic">
-                <img src="./images/疾病风险切图/2blue-fxz.png" alt="">
+                <em style="top: 10%"><img src="./images/zhu-2.png" alt=""></em>
                 <span>0.67</span>
             </div>
         </div>
 
-        <strong class="blue">0.67倍</strong>
+        <strong class="red"><span>0.67</span>倍</strong>
         <span class="big">风险一般</span>
         <span class="en">HIGHER</span>
     </div>
