--- a/web-healthy/healthy-third-has.html
+++ b/web-healthy/healthy-third-has.html
@@ -14,7 +14,7 @@
     <script src="js/fn.js"></script>
 </head>
 
-<body>
+<body class="bg-2">
     <header class="third-header">
         <img src="./images/单基因切图/2-1headbg.png" alt="">
         <a class="back" href=""><img src="./images/单基因切图/2-1back.png" alt=""></a>
