--- a/web-healthy/healthy-third-red.html
+++ b/web-healthy/healthy-third-red.html
@@ -14,7 +14,7 @@
     <script src="js/fn.js"></script>
 </head>
 
-<body class="style-red">
+<body class="style-red bg-2">
     <header class="third-header-2">
         <img src="./images/疾病风险切图/2red-head-bg.png" alt="">
         <h3>高血压</h3>
@@ -31,12 +31,12 @@
                 <li>0</li>
             </ul>
             <div class="data-pic">
-                <img src="./images/疾病风险切图/2red-fxz.png" alt="">
+                <em style="top: 10%"><img src="./images/zhu-1.png" alt=""></em>
                 <span>1.67</span>
             </div>
         </div>
 
-        <strong class="red">1.67倍</strong>
+        <strong class="red"><span>1.67</span>倍</strong>
         <span class="big">风险较高</span>
         <span class="en">HIGHER</span>
     </div>
