--- a/web-healthy/index.html
+++ b/web-healthy/index.html
@@ -19,7 +19,7 @@
 		<img src="./images/head-bg.png" alt="">
 		<div class="menu">
 			<i></i>
-			<ul>
+			<ul style="display: none;">
 				<li><a href="">报告说明</a></li>
 				<li><a href="">报告解读</a></li>
 				<li><a href="">去分享<i class="share"></i></a></li>
