--- a/web-healthy/healthy-third-innormal.html
+++ b/web-healthy/healthy-third-innormal.html
@@ -14,7 +14,7 @@
     <script src="js/fn.js"></script>
 </head>
 
-<body class="style-green">
+<body class="style-green bg-2">
     <header class="third-header">
         <img src="./images/安全切图/1headbg.png" alt="">
         <a class="back" href=""><img src="./images/安全切图/back.png" alt=""></a>
