--- a/web-healthy/healthy-third-blue.html
+++ b/web-healthy/healthy-third-blue.html
@@ -24,19 +24,19 @@
     <div class="third-data">
         <div class="line-con">
             <ul class="num-data">
+                <li>♾</li>
+                <li>3</li>
                 <li>2</li>
-                <li>1.5</li>
                 <li>1</li>
-                <li>0.5</li>
                 <li>0</li>
             </ul>
             <div class="data-pic">
-                <em style="top: 10%"><img src="./images/zhu-2.png" alt=""></em>
-                <span>0.67</span>
+                <em><img src="./images/zhu-2.png" alt=""></em>
+                <span>0.89</span>
             </div>
         </div>
-
-        <strong class="red"><span>0.67</span>倍</strong>
+        <!-- 根据此处数值会自动计算比例 -->
+        <strong class="red"><span>0.89</span>倍</strong>
         <span class="big">风险一般</span>
         <span class="en">HIGHER</span>
     </div>
