--- a/web-tsu2/apply.html
+++ b/web-tsu2/apply.html
@@ -54,22 +54,21 @@
 		</div>
 		<div class="nav_list">
 			<div class="in">
-				<div class="in">
-					<a href="index.html">首页</a>
-					<a href="project.html">教学项目</a>
-					<a class="active" href="apply.html">申报指南</a>
-					<a href="about.html">关于我们</a>
-					<a href="practice.html">项目活动</a>
-					<a href="development.html">职业发展</a>
-				</div>
-				<i class="f-ifont close for-mobile">&#xe62b;</i>
-				<div class="serach-div">
-					<form class="search-inp" action="">
-						<input type="text" value="" />
-						<i class="close f-ifont">&#xe643;</i>
-						<i class="search f-ifont">&#xe656;</i>
-					</form>
-				</div>
+				<a href="index.html">首页</a>
+				<a href="project.html">教学项目</a>
+				<a href="//ug.sem.tsinghua.edu.cn/teachers/kuaijixi.html">师资力量</a>
+				<a class="active" href="apply.html">申报指南</a>
+				<a href="about.html">关于我们</a>
+				<a href="practice.html">项目活动</a>
+				<a href="development.html">职业发展</a>
+			</div>
+			<i class="f-ifont close for-mobile">&#xe62b;</i>
+			<div class="serach-div">
+				<form class="search-inp" action="">
+					<input type="text" value="" />
+					<i class="close f-ifont">&#xe643;</i>
+					<i class="search f-ifont">&#xe656;</i>
+				</form>
 			</div>
 		</div>
 	</nav>
@@ -85,38 +84,32 @@
 	<div class="apply-list">
 		<ul>
 			<li>
-				<a href="">
-					<img src="./images/new/apply-1.png" alt="">
-					<div class="in">
-						<h3>申请资格</h3>
-						<ul>
-							<li>具有清华大学学籍的大一、大二全日制在校本科生</li>
-							<li>主修专业学习成绩良好，学有余力</li>
-							<li>已修课程没有不及格科目</li>
-							<li>没有其他辅修或第二学位项目</li>
-						</ul>
-					</div>
-				</a>
+				<img src="./images/new/apply-1.png" alt="">
+				<div class="in">
+					<h3>申请资格</h3>
+					<ul>
+						<li>具有清华大学学籍的大一、大二全日制在校本科生</li>
+						<li>主修专业学习成绩良好，学有余力</li>
+						<li>已修课程没有不及格科目</li>
+						<li>没有其他辅修或第二学位项目</li>
+					</ul>
+				</div>
 			</li>
 			<li>
-				<a href="">
-					<img src="./images/new/apply-2.png" alt="">
-					<div class="in">
-						<h3>申报流程</h3>
-						<p>
-							首先在学校系统报名并以附件形式上传简历、个人自述及电子版成绩单，之后在经管内网上补充填写个人报名信息，注意选择申请专业及是否在经济学及工商管理专业之间接受调剂（金融方向未录取自动转入经济学方向的选录；财务分析与控制方向或商务数据科学方向未录取自动转入工商管理专业的选录）
-						</p>
-					</div>
-				</a>
+				<img src="./images/new/apply-2.png" alt="">
+				<div class="in">
+					<h3>申报流程</h3>
+					<p>
+						首先在学校系统报名并以附件形式上传简历、个人自述及电子版成绩单，之后在经管内网上补充填写个人报名信息，注意选择申请专业及是否在经济学及工商管理专业之间接受调剂（金融方向未录取自动转入经济学方向的选录；财务分析与控制方向或商务数据科学方向未录取自动转入工商管理专业的选录）
+					</p>
+				</div>
 			</li>
 			<li>
-				<a href="">
-					<img src="./images/new/apply-3.png" alt="">
-					<div class="in">
-						<h3>招生说明会</h3>
-						<p>为帮助同学们更好地了解第二学位各项目的情况，清华经管学院于每年5月初召开招生说明会对项目培养情况进行介绍。</p>
-					</div>
-				</a>
+				<img src="./images/new/apply-3.png" alt="">
+				<div class="in">
+					<h3>招生说明会</h3>
+					<p>为帮助同学们更好地了解第二学位各项目的情况，清华经管学院于每年5月初召开招生说明会对项目培养情况进行介绍。</p>
+				</div>
 			</li>
 		</ul>
 	</div>
