--- a/web-tsu2/index.html
+++ b/web-tsu2/index.html
@@ -56,6 +56,7 @@
 			<div class="in">
 				<a class="active" href="index.html">首页</a>
 				<a href="project.html">教学项目</a>
+				<a href="//ug.sem.tsinghua.edu.cn/teachers/kuaijixi.html">师资力量</a>
 				<a href="apply.html">申报指南</a>
 				<a href="about.html">关于我们</a>
 				<a href="practice.html">项目活动</a>
@@ -403,10 +404,7 @@
 			grabCursor: true,
 			paginationClickable: true,
 			autoplayDisableOnInteraction: false,
-			autoplay: {
-				delay: 3000,
-				disableOnInteraction: false
-			}
+			autoplay: false
 		})
 
 		$(".swiper-container-teachers").mouseenter(function () {
