--- a/web-tsu2/newsDetial.html
+++ b/web-tsu2/newsDetial.html
@@ -54,22 +54,21 @@
 		</div>
 		<div class="nav_list">
 			<div class="in">
-				<div class="in">
-					<a href="index.html">首页</a>
-					<a href="project.html">教学项目</a>
-					<a href="apply.html">申报指南</a>
-					<a href="about.html">关于我们</a>
-					<a class="active" href="practice.html">项目活动</a>
-					<a href="development.html">职业发展</a>
-				</div>
-				<i class="f-ifont close for-mobile">&#xe62b;</i>
-				<div class="serach-div">
-					<form class="search-inp" action="">
-						<input type="text" value="" />
-						<i class="close f-ifont">&#xe643;</i>
-						<i class="search f-ifont">&#xe656;</i>
-					</form>
-				</div>
+				<a href="index.html">首页</a>
+				<a href="project.html">教学项目</a>
+				<a href="//ug.sem.tsinghua.edu.cn/teachers/kuaijixi.html">师资力量</a>
+				<a href="apply.html">申报指南</a>
+				<a href="about.html">关于我们</a>
+				<a class="active" href="practice.html">项目活动</a>
+				<a href="development.html">职业发展</a>
+			</div>
+			<i class="f-ifont close for-mobile">&#xe62b;</i>
+			<div class="serach-div">
+				<form class="search-inp" action="">
+					<input type="text" value="" />
+					<i class="close f-ifont">&#xe643;</i>
+					<i class="search f-ifont">&#xe656;</i>
+				</form>
 			</div>
 		</div>
 	</nav>
