--- a/web-nutrition/nutrition-index.html
+++ b/web-nutrition/nutrition-index.html
@@ -147,7 +147,47 @@
             <li>
                 <a href="">
                     <h3>养素贝儿艾兰得®多种维生素铁锌含片</h3>
-                    <img src="" alt="">
+                    <div class="img"><img src="./images/demo1.png" alt=""></div>
+                    <p class="p1">营养目标：<br>补充多种维生素和铁、锌</p>
+                    <p class="p2">每天补充2片</p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <h3>养素贝儿艾兰得®多种维生素铁锌含片</h3>
+                    <div class="img"><img src="./images/demo2.png" alt=""></div>
+                    <p class="p1">营养目标：<br>补充铁、锌</p>
+                    <p class="p2">每天补充2片</p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <h3>养素贝儿艾兰得®多种维生素铁锌含片</h3>
+                    <div class="img"><img src="./images/demo2.png" alt=""></div>
+                    <p class="p1">营养目标：<br>补充多种维生素和铁、锌</p>
+                    <p class="p2">每天补充2片</p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <h3>养素贝儿艾兰得®多种维生素铁锌含片</h3>
+                    <div class="img"><img src="./images/demo1.png" alt=""></div>
+                    <p class="p1">营养目标：<br>补充多种维生素和铁、锌</p>
+                    <p class="p2">每天补充2片</p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <h3>养素贝儿艾兰得®多种维生素铁锌含片</h3>
+                    <div class="img"><img src="./images/demo1.png" alt=""></div>
+                    <p class="p1">营养目标：<br>补充多种维生素和铁、锌</p>
+                    <p class="p2">每天补充2片</p>
+                </a>
+            </li>
+            <li>
+                <a href="">
+                    <h3>养素贝儿艾兰得®多种维生素铁锌含片</h3>
+                    <div class="img"><img src="./images/demo1.png" alt=""></div>
                     <p class="p1">营养目标：<br>补充多种维生素和铁、锌</p>
                     <p class="p2">每天补充2片</p>
                 </a>
